<resources>
    <string name="app_name">BeautySync</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="me">Me</string>
    <string name="orders">Orders</string>
    <string name="feed">Feed</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="beautysync">BeautySync</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="personal_info">Personal Info</string>
    <string name="edit_image">Edit Image</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_configuration">*1 uppercase character, 1 special character, 1 number, 1 lowercase letter, 8 characters*</string>
    <string name="looking_for_text">What are you looking for in a beautician?</string>
    <string name="beautician_location_default">Do you hope to find local, regional, or national beauticians?</string>
    <string name="local">Local</string>
    <string name="region">Region</string>
    <string name="nation">Nation</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="need_an_account_sign_up_here">Need An Account? Sign Up Here</string>
    <string name="are_you_a_beautician_sign_up_here">Are You A Beautician? Sign Up Here</string>
    <string name="change">Change</string>
    <string name="business_info">Business Info</string>
    <string name="education">Education</string>
    <string name="self_taught">*Self Taught is Fine*</string>
    <string name="passion">Passion</string>
    <string name="brief_bio">Brief bio expressing your interest as a beautician</string>
    <string name="business_address">Business Address</string>
    <string name="street_address">Street Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="are_you_open">Are you open to traveling to client destinations?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="banking_info">Banking Info</string>
    <string name="delete">Delete</string>
    <string name="please_note">* Please note that BeautySync, Inc does not save any personal banking information, but instead collects only what is necessary for our third party banking provider \'Stripe\' to be in compliance with federal banking regulation. *</string>
    <string name="individual">Individual</string>
    <string name="business">Business</string>
    <string name="stripe_s_terms_of_service">Stripe\'s Terms of Service</string>
    <string name="stripe_s_terms_of_service_1">Stripe is our banking provider. By continuing, you acknowledge and accept Stripe\'s Terms of Service.</string>
    <string name="click_here_to_view">Click here to view</string>
    <string name="do_you_accept">Do you accept?</string>
    <string name="mcc_code">MCC Code</string>
    <string name="an_mcc_code">* An MCC Code is a 4 digit Merchant Category Code describing your business. We recommend 7230 for beautician services. *</string>
    <string name="business_url">Business Url</string>
    <string name="feel_free">* Feel free to use any personal or social media website describing your business. *</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="phone_number">Phone Number</string>
    <string name="individual_address">Individual Address</string>
    <string name="street_address_2">Street Address 2</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="external_account">External Account</string>
    <string name="please_enter_banking_info">Please enter banking info</string>
    <string name="account_edit_button">Account Edit Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_here_for_more_detail">Click here for more detail</string>
    <string name="item_image">Item Image</string>
    <string name="item_likes">Item Likes</string>
    <string name="item_orders">Item Orders</string>
    <string name="item_rating">Item Rating</string>
    <string name="item_price">Item Price</string>
    <string name="hair_care">Hair Care</string>
    <string name="skin_care">Skin Care</string>
    <string name="nail_care">Nail Care</string>
    <string name="filter">Filter</string>
    <string name="checkout">Checkout</string>
    <string name="banking">Banking</string>
    <string name="x">X</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_holder">Account Holder</string>
    <string name="account_number">Account Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="add">Add</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="content">Content</string>
    <string name="status">Status</string>
    <string name="type_of_service">Type of Service</string>
    <string name="item">Item</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="total">Total</string>
    <string name="pending">Pending</string>
    <string name="scheduled">Scheduled</string>
    <string name="complete">Complete</string>
    <string name="please_note_1">*Please note that you cannot cancel or change the date of a \'scheduled\' service item w/ less than two hours before the event. Additionally, all payouts will be awarded one hour after each event.*</string>
    <string name="please_note_2">*Please note that you cannot cancel or change the date of a \'scheduled\' service item w/ less than two hours before the event.*</string>
    <string name="edit_item">Edit Item</string>
    <string name="item_title">Item Title</string>
    <string name="add_image">Add Image</string>
    <string name="cancel">Cancel</string>
    <string name="item_description">Item Description</string>
    <string name="hashtags">Hashtags</string>
    <string name="account_settings">Account Settings</string>
    <string name="profile">Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="regulation_agreeement">Regulation Agreeement</string>
    <string name="report_an_issue">Report An Issue</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="item_button">Item Button</string>
    <string name="no_item">No Item</string>
    <string name="expectations_met">Expectations Met</string>
    <string name="quality">Quality</string>
    <string name="beautician_rating">Beautician Rating</string>
    <string name="item_detail">Item Detail</string>
    <string name="expectations">expectations</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="beauticians">Beauticians</string>
    <string name="likes">Likes</string>
    <string name="order_details">Order Details</string>
    <string name="date_of_event">Date of Event</string>
    <string name="clear">Clear</string>
    <string name="add_date_of_event">Add Date of Event</string>
    <string name="select_the_dates_of_your_event_here">Select the dates of your event here.</string>
    <string name="ok">Ok</string>
    <string name="location">Location</string>
    <string name="add_location">Add Location</string>
    <string name="notes_to_beautician">Notes to Beautician</string>
    <string name="add_notes_to_beautician_here">Add notes to the beautician here.</string>
    <string name="for_best_experience_please_avoid_scheduling_same_day_services">*For best experience, please avoid scheduling same day services.*</string>
    <string name="subject_to_change_by_beautician">*Subject to change by Beautician*</string>
    <string name="food_total">Food Total</string>
    <string name="taxes_and_fees">Taxes and Fees</string>
    <string name="pay">Pay</string>
    <string name="click_here_to_view_detail">Click here to view detail</string>
    <string name="event_cost">Event Cost</string>
    <string name="does_the_user_recommend">Does the user recommend?</string>
    <string name="messages_for_scheduling">Messages For Scheduling</string>
    <string name="messages">Messages</string>
    <string name="send_message">Send Message</string>
    <string name="user_review">User Review</string>
    <string name="did_this_experience_meet_your_expectation">Did this experience meet your expectation?</string>
    <string name="how_was_the_quality_of_the_service">How was the quality of the service?</string>
    <string name="what_would_you_rate_this_beautician">What would you rate this beautician?</string>
    <string name="any_thoughts_you_d_like_to_share_with_the_beautician">Any thoughts you\'d like to share with the beautician?</string>
    <string name="comments">Comments</string>
    <string name="play_image">Play Image</string>
    <string name="back_button">Back Button</string>
    <string name="video_views">Video Views</string>


    <string-array name="type_of_service">
        <item>Hair Care Items</item>
        <item>Skin Care Items</item>
        <item>Nail Care Items</item>
    </string-array>


    <string-array name="type_of_service_all">
        <item>All Items</item>
        <item>Hair Care Items</item>
        <item>Skin Care Items</item>
        <item>Nail Care Items</item>
    </string-array>


</resources>