<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".beautician.info.BusinessInfo">

    <RelativeLayout
        android:id="@+id/initial_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">


        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back_arrow"
            android:src="@drawable/arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/business_info"
            android:textColor="@color/main"
            android:textSize="17sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/name_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="7dp"
        android:background="@color/gray300" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/user_name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education"
                android:textColor="@color/main"
                android:textSize="15sp"
                android:textStyle="bold" />



        <EditText
            android:id="@+id/education"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:hint="@string/education"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/main"
            android:textSize="12sp" />

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_taught"
            android:textColor="@color/gray400"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passion_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passion"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/passion"
            android:layout_width="370dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:hint="@string/brief_bio"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/main"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business_address"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/street_address"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:hint="@string/street_address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/main"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/city"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:hint="@string/city"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/main"
            android:textSize="12sp" />

            <EditText
                android:id="@+id/state"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/custom_input"
                android:hint="@string/state"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/main"
                android:textSize="12sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/zip_code"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_input"
            android:hint="@string/zip_code"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/main"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_open"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:cornerRadius="1dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/main"
                android:textSize="14sp"
                app:cornerRadius="1dp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/save"
        android:layout_marginBottom="25dp"
        android:textAllCaps="false"
        android:textColor="@color/main"
        android:textSize="14sp"
        app:cornerRadius="1dp" />

</LinearLayout>